
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int lowercase(int ch) {
 if ('A' <= ch && ch <= 'Z')
  return ch - 'A' + 'a';
 return ch;
}
